--- a/Es.html
+++ b/Es.html
@@ -77,61 +77,64 @@
                                                         <td height="25">&nbsp;unique sugar alternative and a low-calorie sweetener that prevents plaque buildup, giving every customer a cleaner</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;smile. Our sugar-free gum products are perfectly made to satisfy children who are prone to tooth decay, diabetic adults,</td>
+                                                        <td height="25">&nbsp;smile. Our sugar-free gum products are perfectly made to satisfy children who are prone to tooth decay, diabetic</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;and all sweet-craving individuals who are into diet and fitness. Research shows that the majority of gum products in</td>
+                                                        <td height="25">&nbsp;adults, and all sweet-craving individuals who are into diet and fitness. Research shows that the majority of gum</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;the Philippines do not contain xylitol. Moreover, historical data shows that about 92.4% of Filipinos have tooth decay</td>
+                                                        <td height="25">&nbsp; products in the Philippines do not contain xylitol. Moreover, historical data shows that about 92.4% of Filipinos have</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;and suffer from dental problems. An advocate from ‘Smile Pilipinas’ also once emphasized that oral health is simply</td>
+                                                        <td height="25">&nbsp;tooth decay and suffer from dental problems. An advocate from ‘Smile Pilipinas’ also once emphasized that oral</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;not a priority in the Philippines. With this, producing gum products that will potentially be highly beneficial for</td>
+                                                        <td height="25">&nbsp;health is simply not a priority in the Philippines. With this, producing gum products that will potentially be highly</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;Filipinos’ oral health will also serve as an important starting point; a way to spread awareness of how important oral</td>
+                                                        <td height="25">&nbsp;beneficial for Filipinos’ oral health will also serve as an important starting point; a way to spread awareness of how</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;care is. Our primary strategy is to introduce the health benefits our gum products can offer by highlighting the use of</td>
+                                                        <td height="25">&nbsp;important oral care is. Our primary strategy is to introduce the health benefits our gum products can offer by</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;xylitol, our product's unique ingredient, Our business will initially operate home-based and use social media (Twitter,</td>
+                                                        <td height="25">&nbsp;highlighting the use of xylitol, our product's unique ingredient, Our business will initially operate home-based and use</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;Facebook, and Instagram) to promote our chewing gum products. The gum making will be made in a household. The</td>
+                                                        <td height="25">&nbsp;social media (Twitter, Facebook, and Instagram) to promote our chewing gum products. The gum making will be</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;materials required are sanitized, and the ingredients needed are purchased in advance from various stores. For a</td>
+                                                        <td height="25">&nbsp;made in a household. The materials required are sanitized, and the ingredients needed are purchased in advance from</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;customer to place an order for our gum products (in pre-order), he/she must get in reach with us via our Facebook,</td>
+                                                        <td height="25">&nbsp;various stores. For a customer to place an order for our gum products (in pre-order), he/she must get in reach with us</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;Instagram, and Twitter accounts. They could select their preferred gum flavor and type of packaging from our shortlist. </td>
+                                                        <td height="25">&nbsp;via our Facebook, Instagram, and Twitter accounts. They could select their preferred gum flavor and type of packaging</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;As of now, we offer 5 various flavors and 3 different types of wholesale packaging. Each chewing gum piece includes</td>
+                                                        <td height="25">&nbsp;from our shortlist. As of now, we offer 5 various flavors and 3 different types of packaging (per pack). Each chewing</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;different motivational quotes in its retail (piece) packaging, Only orders per pack will be accepted. When the gums are</td>
+                                                        <td height="25">&nbsp;gum piece includes different motivational quotes in its packaging (per piece). Only orders per pack will be accepted.</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;finished, they will be delivered directly to the customer's home. Once the target market is reached, gobble gum will be</td>
+                                                        <td height="25">&nbsp;When the gums are finished, they will be delivered directly to the customer's home. Once the target market is reached,</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;available at small dental clinics in Pasig City. Overall, our gum products have a number of competitive features that</td>
+                                                        <td height="25">&nbsp;gobble gum will be available at small dental clinics in Pasig City. Overall, our gum products have a number of</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;will be used to its advantage to achieve market penetration such as the health benefits it can offer, added unique</td>
+                                                        <td height="25">&nbsp;competitive features that will be used to their advantage to achieve market penetration such as the health benefits it</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;features, and affordability. Initial capitalization for the business, good for a month expense, is ₱80,291.18, Expected</td>
+                                                        <td height="25">&nbsp;can offer, added unique features, and affordability. The initial capitalization for the business, good for a monthly</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;revenue for Year 1 is ₱180,000, and the total cost of goods sold amounted to ₱760,000,.</td>
+                                                        <td height="25">&nbsp;expense, is ₱35,691.18, Expected revenue for Year 1 is ₱76,545.84, and the total cost of goods sold amounted to</td>
+                                                    </tr>
+                                                    <tr>
+                                                        <td height="25">&nbsp;₱504,840.</td>
                                                     </tr>
                                                 </table>
                                         </font>
@@ -141,7 +144,7 @@
                             </table>                      
                         </center>
                     </td>
-                    <td><img src="Es111.jpg" height="700" width="550">
+                    <td><img src="Es111.jpg" height="750" width="550">
                     </td>
                 </tr>
                 <tr>
