--- a/Fp.html
+++ b/Fp.html
@@ -76,6 +76,23 @@
                                                                 </td>
                                                             </font>
                                                         </tr>
+                                                        <tr>
+                                                            <td>
+                                                                <center>
+                                                                    <table width="600" height="80">
+                                                                        <tr>
+                                                                            <td>
+                                                                                <font size="4" color="#4f5d75">
+                                                                                    <center>
+                                                                                        The initial capitalization for the business, good for a monthly expense, is ₱35,691.18, Expected revenue for Year 1 is ₱76,545.84, and the total cost of goods sold amounted to ₱504,840.
+                                                                                    </center>
+                                                                                </font>
+                                                                            </td>
+                                                                        </tr>
+                                                                    </table> 
+                                                                </center>      
+                                                            </td>
+                                                        </tr>
                                                     </table>
                                                 </center>
                                             </font>
