--- a/Mp.html
+++ b/Mp.html
@@ -37,11 +37,11 @@
 
             <table width="1467">
                 <tr>
-                    <td width="350"><img src="Mp1.jpg" width="350">
+                    <td width="1"><img src="Mp111.jpg" width="420">
                     </td>
                     <td>
                         <center>
-                            <table width="950">
+                            <table width="900">
                                 <tr>
                                     <td>
                                         <fieldset>
@@ -65,12 +65,12 @@
                                                 <hr width="150" color="#868fa0" size="1">
                                             </legend>
                                             <font size="4" color="#4f5d75">
-                                                <table width="925">
+                                                <table width="900">
                                                     <tr>
-                                                        <td height="25">&nbsp;Aglaonema is a genus of flowering plants in the arum family Araceae. These plants are native to Asia's tropical and subtropical</td>
+                                                        <td height="25"><img src="Ca.png" width="900"></td>
                                                     <tr>
                                                 </table>
-                                        </font>
+                                            </font>
                                         </fieldset>
                                     </td>
                                 </tr>
@@ -101,6 +101,10 @@
                                     </td>
                                     <td><a href="Mp5.html" target="_self">
                                         <img src="B51.jpg" width="17" onmouseover="this.src='B52.jpg';" onmouseout="this.src='B51.jpg';"/>
+                                        </a>
+                                    </td>
+                                    <td><a href="Mp6.html" target="_self">
+                                        <img src="B61.jpg" width="17" onmouseover="this.src='B62.jpg';" onmouseout="this.src='B61.jpg';"/>
                                         </a>
                                     </td>
                                 </tr>
