--- a/Mp2.html
+++ b/Mp2.html
@@ -37,7 +37,7 @@
 
             <table width="1467">
                 <tr>
-                    <td width="350"><img src="Mp2.jpg" width="330">
+                    <td width="350"><img src="Mp211.jpg" width="370">
                     </td>
                     <td>
                         <center>
@@ -126,6 +126,10 @@
                                     </td>
                                     <td><a href="Mp5.html" target="_self">
                                         <img src="B51.jpg" width="17" onmouseover="this.src='B52.jpg';" onmouseout="this.src='B51.jpg';"/>
+                                        </a>
+                                    </td>
+                                    <td><a href="Mp6.html" target="_self">
+                                        <img src="B61.jpg" width="17" onmouseover="this.src='B62.jpg';" onmouseout="this.src='B61.jpg';"/>
                                         </a>
                                     </td>
                                 </tr>
