--- a/Mp3.html
+++ b/Mp3.html
@@ -130,6 +130,10 @@
                                         <img src="B51.jpg" width="17" onmouseover="this.src='B52.jpg';" onmouseout="this.src='B51.jpg';"/>
                                         </a>
                                     </td>
+                                    <td><a href="Mp6.html" target="_self">
+                                        <img src="B61.jpg" width="17" onmouseover="this.src='B62.jpg';" onmouseout="this.src='B61.jpg';"/>
+                                        </a>
+                                    </td>
                                 </tr>
                             </table>
                         </font>
