--- a/Mp4.html
+++ b/Mp4.html
@@ -37,7 +37,7 @@
 
             <table width="1467">
                 <tr>
-                    <td width="350"><img src="Mp3.jpg" width="400">
+                    <td width="350"><img src="Mp411.jpg" width="420">
                     </td>
                     <td>
                         <center>
@@ -65,67 +65,9 @@
                                                 <hr width="150" color="#868fa0" size="1">
                                             </legend>
                                             <font size="4" color="#4f5d75">
-                                                <table width="1000">
+                                                <table width="900">
                                                     <tr>
-                                                        <td height="25"><h4>&nbsp;PRODUCT CHARACTERISTICS&nbsp; OR&nbsp;  FEATURES</h4></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;The product of Gobble Gums is a gum incorporating xylitol, a low-calorie sweetener, and natural sugar alcohol produced by plants.</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp; The company's primary goal is to provide customers with sugar as well as calorie-free treats that will support the improvement of dental</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;health and the prevention of dental cavities. It is an excellent replacement for traditional sweeteners.</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;</td>
-                                                    </tr>
-                                                </table>
-                                        </font>
-                                        </fieldset>
-                                    </td>
-                                </tr>
-                            </table>
-                            <table width="950">
-                                <tr>
-                                    <td>
-                                        <fieldset>
-                                            <legend>
-                                                <font color="#2d3142" size="5" align="center">
-                                                    <table>
-                                                        <tr>
-                                                            <td>M</td>
-                                                            <td>A</td>
-                                                            <td>R</td>
-                                                            <td>K</td>
-                                                            <td>E</td>
-                                                            <td>T</td>
-                                                            <td>&nbsp; P</td>
-                                                            <td>L</td>
-                                                            <td>A</td>
-                                                            <td>N</td>
-                                                        </tr>
-                                                    </table>
-                                                </font>
-                                                <hr width="150" color="#868fa0" size="1">
-                                            </legend>
-                                            <font size="4" color="#4f5d75">
-                                                <table width="1000">
-                                                    <tr>
-                                                        <td height="25"><h4>&nbsp;PRODUCT CHARACTERISTICS&nbsp; OR&nbsp;  FEATURES</h4></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;The product of Gobble Gums is a gum incorporating xylitol, a low-calorie sweetener, and natural sugar alcohol produced by plants.</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp; The company's primary goal is to provide customers with sugar as well as calorie-free treats that will support the improvement of dental</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;health and the prevention of dental cavities. It is an excellent replacement for traditional sweeteners.</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;</td>
+                                                        <td height="25"><img src="pf.jpg" width="900"></td>
                                                     </tr>
                                                 </table>
                                         </font>
@@ -159,6 +101,10 @@
                                     </td>
                                     <td><a href="Mp5.html" target="_self">
                                         <img src="B51.jpg" width="17" onmouseover="this.src='B52.jpg';" onmouseout="this.src='B51.jpg';"/>
+                                        </a>
+                                    </td>
+                                    <td><a href="Mp6.html" target="_self">
+                                        <img src="B61.jpg" width="17" onmouseover="this.src='B62.jpg';" onmouseout="this.src='B61.jpg';"/>
                                         </a>
                                     </td>
                                 </tr>
