--- a/Mp6.html
+++ b/Mp6.html
@@ -107,6 +107,10 @@
                                         <img src="B62.jpg" width="17" onmouseover="this.src='B61.jpg';" onmouseout="this.src='B62.jpg';"/>
                                         </a>
                                     </td>
+                                    <td><a href="Mp7.html" target="_self">
+                                        <img src="B71.jpg" width="17" onmouseover="this.src='B71.jpg';" onmouseout="this.src='B72.jpg';"/>
+                                        </a>
+                                    </td>
                                 </tr>
                             </table>
                         </font>
