--- a/Mp7.html
+++ b/Mp7.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>
-                Market Plan #3
+                Market Plan #6
             </title>
         </head>
         <body>
@@ -37,11 +37,11 @@
 
             <table width="1467">
                 <tr>
-                    <td width="350"><img src="Mp3.jpg" width="400">
+                    <td width="350"><img src="Mp711.jpg" width="420">
                     </td>
                     <td>
                         <center>
-                            <table width="950">
+                            <table width="800">
                                 <tr>
                                     <td>
                                         <fieldset>
@@ -65,36 +65,9 @@
                                                 <hr width="150" color="#868fa0" size="1">
                                             </legend>
                                             <font size="4" color="#4f5d75">
-                                                <table width="1000">
+                                                <table width="800">
                                                     <tr>
-                                                        <td height="25"><h4>&nbsp;SALES STRATEGY</h4></td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;To ensure the ordering of the Gobble Gums will be simple and accessible, the company will use Facebook, Twitter, and Instagram as</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;tools for ordering for the consumers. As a result, consumers must contact us via our social media accounts to place an order for the</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;products.</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;Gobble Gums will also use four factors to boost its sales. Firstly, the packaging of the product must be eye-pleasing and make the </td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;consumers excited to start chewing the gums. Secondly, the price needs to be affordable and reasonable so that customers feel</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;relaxed and ready to buy Gobble Gums. The third is perfect customer service, which convinces the buyers to view the company as a</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;professional seller with genuine care for its customers. Lastly, sales promotion will bring different offers to excite the consumers.</td>
-                                                    </tr>
-                                                    <tr>
-                                                        <td height="25">&nbsp;</td>
+                                                        <td height="25"><img src="cm.png" width="800"></td>
                                                     </tr>
                                                 </table>
                                         </font>
@@ -119,7 +92,7 @@
                                         </a>
                                     </td>
                                     <td><a href="Mp3.html" target="_self">
-                                        <img src="B32.jpg" width="17" onmouseover="this.src='B31.jpg';" onmouseout="this.src='B32.jpg';"/>
+                                        <img src="B31.jpg" width="17" onmouseover="this.src='B32.jpg';" onmouseout="this.src='B31.jpg';"/>
                                         </a>
                                     </td>
                                     <td><a href="Mp4.html" target="_self">
@@ -135,7 +108,7 @@
                                         </a>
                                     </td>
                                     <td><a href="Mp7.html" target="_self">
-                                        <img src="B71.jpg" width="17" onmouseover="this.src='B71.jpg';" onmouseout="this.src='B72.jpg';"/>
+                                        <img src="B72.jpg" width="17" onmouseover="this.src='B71.jpg';" onmouseout="this.src='B72.jpg';"/>
                                         </a>
                                     </td>
                                 </tr>
