--- a/Mp2.html
+++ b/Mp2.html
@@ -132,6 +132,10 @@
                                         <img src="B61.jpg" width="17" onmouseover="this.src='B62.jpg';" onmouseout="this.src='B61.jpg';"/>
                                         </a>
                                     </td>
+                                    <td><a href="Mp7.html" target="_self">
+                                        <img src="B71.jpg" width="17" onmouseover="this.src='B71.jpg';" onmouseout="this.src='B72.jpg';"/>
+                                        </a>
+                                    </td>
                                 </tr>
                             </table>
                         </font>
