--- a/Mo2.html
+++ b/Mo2.html
@@ -2,7 +2,7 @@
     <html>
         <head>
             <title>
-                Management and Organization #1
+                Management and Organization #2
             </title>
         </head>
         <body>
@@ -83,26 +83,7 @@
                                                             <font color="2d3142">
                                                                 <td>
                                                                     <center>
-                                                                    <img src="Mo111.jpg" width="320" border="3">
-                                                                    </center>
-                                                                </td>
-                                                                <td>
-                                                                    <center>
-                                                                    <img src="Mo112.jpg" width="320" border="3" hspace="3">
-                                                                    </center>
-                                                                </td>
-                                                            </font>
-                                                        </tr>
-                                                        <tr>
-                                                            <font color="2d3142">
-                                                                <td>
-                                                                    <center>
-                                                                    <img src="Mo113.jpg" width="320" border="3" hspace="3">
-                                                                    </center>
-                                                                </td>
-                                                                <td>
-                                                                    <center>
-                                                                    <img src="Mo114.jpg" width="320" height="320" border="3">
+                                                                    <img src="oc111.jpg" width="900">
                                                                     </center>
                                                                 </td>
                                                             </font>
@@ -121,12 +102,12 @@
                     <td bgcolor="#2d3142" height="115" colspan="2">
                         <table cellspacing="10" align="center">
                             <tr>
-                                <td><a href="Mo1.html" target="_self">
-                                    <img src="B12.jpg" width="17" onmouseover="this.src='B11.jpg';" onmouseout="this.src='B12.jpg';"/>
+                                <td><a href="Mo.html" target="_self">
+                                    <img src="B11.jpg" width="17" onmouseover="this.src='B12.jpg';" onmouseout="this.src='B11.jpg';"/>
                                     </a>
                                 </td>
                                 <td><a href="Mo2.html" target="_self">
-                                    <img src="B21.jpg" width="17" onmouseover="this.src='B22.jpg';" onmouseout="this.src='B21.jpg';"/>
+                                    <img src="B22.jpg" width="17" onmouseover="this.src='B21.jpg';" onmouseout="this.src='B22.jpg';"/>
                                     </a>
                                 </td>
                             </tr>
