--- a/Es.html
+++ b/Es.html
@@ -128,13 +128,13 @@
                                                         <td height="25">&nbsp;competitive features that will be used to their advantage to achieve market penetration such as the health benefits it</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;can offer, added unique features, and affordability. The initial capitalization for the business, good for a monthly</td>
+                                                        <td height="25">&nbsp;can offer, added unique features, and affordability. The initial capitalization for the business, good for a month’s </td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;expense, is ₱35,691.18, Expected revenue for Year 1 is ₱76,545.84, and the total cost of goods sold amounted to</td>
+                                                        <td height="25">&nbsp;expense, is ₱5,687.60. The expected revenue for Year 1 is ₱93,120.00, and the total cost of goods sold amounted to</td>
                                                     </tr>
                                                     <tr>
-                                                        <td height="25">&nbsp;₱504,840.</td>
+                                                        <td height="25">&nbsp;₱68,251.20. The expected profit for year 1 is ₱24,868.8.</td>
                                                     </tr>
                                                 </table>
                                         </font>
