--- a/Fp.html
+++ b/Fp.html
@@ -79,13 +79,12 @@
                                                         <tr>
                                                             <td>
                                                                 <center>
-                                                                    <table width="600" height="80">
+                                                                    <table width="600" height="70">
                                                                         <tr>
                                                                             <td>
                                                                                 <font size="4" color="#4f5d75">
                                                                                     <center>
-                                                                                        The initial capitalization for the business, good for a monthly expense, is ₱35,691.18, Expected revenue for Year 1 is ₱76,545.84, and the total cost of goods sold amounted to ₱504,840.
-                                                                                    </center>
+                                                                                        The initial capitalization for the business, good for a month’s expense, is ₱5,687.60. The expected revenue for Year 1 is ₱93,120.00, and the total cost of goods sold amounted to ₱68,251.20. The expected profit for year 1 is ₱24,868.8.                                                                                    </center>
                                                                                 </font>
                                                                             </td>
                                                                         </tr>
